--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_margin="15dp"
+    android:background="#8000"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/degree_text"
         android:layout_gravity="end"
         android:textColor="#fff"
         android:textSize="60sp"
-        android:text="123"
+        android:layout_marginTop="15dp"
+        android:text="12°C"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
