--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#8000"
     android:layout_height="?attr/actionBarSize">
     <Button
         android:id="@+id/nav_button"
@@ -17,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="123"
+        android:text="榆次"
         android:textColor="#fff"
         android:textSize="20sp" />
 
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
-        android:text="123"
+        android:text="2017-08-12"
         android:layout_centerVertical="true"
         android:textColor="#fff"
         android:textSize="16sp" />
